--- a/Projects-Made/contact-form.html
+++ b/Projects-Made/contact-form.html
@@ -13,7 +13,7 @@
             height: 100vh;
             margin: 0;
             font-family: 'Arial', sans-serif;
-            background-color: #ffeb3b;
+            background-color: #FFF8BA;
             color: #333;
         }
 
@@ -24,7 +24,7 @@
         }
 
         header {
-            background-color: #ffca28;
+            background-color: #FFF380;
             color: #333;
             padding: 20px;
             border-radius: 10px 10px 0 0;
@@ -71,7 +71,7 @@
         }
 
         button {
-            background-color: #ffca28;
+            background-color: #FFF380;
             color: #333;
             padding: 10px 20px;
             border: none;
@@ -81,7 +81,7 @@
         }
 
         button:hover {
-            background-color: #ffbf00;
+            background-color: #D5A8A1;
         }
 
         footer {
@@ -89,7 +89,7 @@
             bottom: 0;
             left: 0;
             width: 100%;
-            background: #ffca28;
+            background: #FFF380;
             text-align: left;
             padding: 10px;
         }
