--- a/Projects-Made/contact-form.html
+++ b/Projects-Made/contact-form.html
@@ -88,8 +88,9 @@
             position: fixed;
             bottom: 0;
             left: 0;
-            width: 100%;
+            width: 100vw;
             background: #FFF380;
+            opacity: 1;
             text-align: left;
             padding: 10px;
         }
