--- a/Projects-Made/to-do.html
+++ b/Projects-Made/to-do.html
@@ -6,44 +6,83 @@
     <title>ToDo List</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f9e1;
+            margin: 0;
+            padding: 0;
         }
 
         #app {
             max-width: 400px;
             margin: 20px auto;
+            background-color: #ecf0d4;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        h2 {
+            color: #2c3e50;
         }
 
         #taskInput {
             width: 70%;
             padding: 8px;
+            margin-right: 10px;
+            border: 1px solid #95a5a6;
+            border-radius: 5px;
+            box-sizing: border-box;
         }
 
         #addBtn {
             padding: 8px;
             cursor: pointer;
+            background-color: #3498db;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
         }
 
         #taskList {
             list-style-type: none;
             padding: 0;
+            margin-top: 15px;
         }
 
         .taskItem {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            border: 1px solid #ccc;
+            border: 1px solid #95a5a6;
             margin: 5px 0;
             padding: 8px;
+            background-color: #ecf0d4;
+            border-radius: 5px;
         }
 
         .deleteBtn {
-            background-color: #ff6666;
+            background-color: #e74c3c;
             color: white;
             border: none;
             padding: 6px 10px;
             cursor: pointer;
+            border-radius: 5px;
+        }
+
+        footer {
+            background-color: #f4f9e1;
+            text-align: center;
+            padding: 10px;
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+        }
+
+        footer p {
+            font-size: 0.8em;
+            color: #333;
+            margin: 0;
         }
     </style>
 </head>
