--- a/projects-made.html
+++ b/projects-made.html
@@ -10,7 +10,9 @@
       <ul>
         <li><a href="/Projects-Made/recipe-book.html" >Recipe Book</a></li>
         <li><a href="/Projects-Made/contact-form.html" >Simulation of a contact form</a></li>
-        <li><a href="#" ></a></li>
+        <li><a href="/Projects-Made/loading.html" >Loading screen</a></li>
+        <li><a href="/Projects-Made/toggle-switch.html" >Toggle Button</a></li>
+        <li><a href="/Projects-Made/" ></a></li>
         <li><a href="/Projects-Made/to-do.html" >ToDo</a></li>
       </ul>
     <footer>
