--- a/projects-made.html
+++ b/projects-made.html
@@ -12,8 +12,9 @@
         <li><a href="/Projects-Made/contact-form.html" >Simulation of a contact form</a></li>
         <li><a href="/Projects-Made/loading.html" >Loading screen</a></li>
         <li><a href="/Projects-Made/toggle-switch.html" >Toggle Button</a></li>
-        <li><a href="/Projects-Made/" ></a></li>
+        <li><a href="/Projects-Made/tooltip.html" ></a></li>
         <li><a href="/Projects-Made/to-do.html" >ToDo</a></li>
+        <li><a href="/Projects-Made/" ></a></li>
       </ul>
     <footer>
         <p>&copy; H.G.</p>
