--- a/projects-made.html
+++ b/projects-made.html
@@ -6,14 +6,15 @@
   </head>
   <body>
     <h1>Website projects made:</h1>
-    <p>0/205-68-51</p>
+    <p>4/205-68-51</p>
       <ul>
         <li><a href="/Projects-Made/recipe-book.html" >Recipe Book</a></li>
         <li><a href="/Projects-Made/contact-form.html" >Simulation of a contact form</a></li>
         <li><a href="/Projects-Made/loading.html" >Loading screen</a></li>
         <li><a href="/Projects-Made/toggle-switch.html" >Toggle Button</a></li>
-        <li><a href="/Projects-Made/tooltip.html" ></a></li>
+        <li><a href="/Projects-Made/tooltip.html" >Tooltip</a></li>
         <li><a href="/Projects-Made/to-do.html" >ToDo</a></li>
+        <li><a href="/Projects-Made/card-flip.html" >Card Flip</a></li>
         <li><a href="/Projects-Made/" ></a></li>
       </ul>
     <footer>
