--- a/projects-made.html
+++ b/projects-made.html
@@ -15,6 +15,21 @@
         <li><a href="/Projects-Made/tooltip.html" >Tooltip</a></li>
         <li><a href="/Projects-Made/to-do.html" >ToDo</a></li>
         <li><a href="/Projects-Made/card-flip.html" >Card Flip</a></li>
+        <li><a href="/Projects-Made/parallax.html" >Parallax Scroll</a></li>
+        <li><a href="/Projects-Made/" ></a></li>
+        <li><a href="/Projects-Made/" ></a></li>
+        <li><a href="/Projects-Made/" ></a></li>
+        <li><a href="/Projects-Made/" ></a></li>
+        <li><a href="/Projects-Made/" ></a></li>
+        <li><a href="/Projects-Made/" ></a></li>
+        <li><a href="/Projects-Made/" ></a></li>
+        <li><a href="/Projects-Made/" ></a></li>
+        <li><a href="/Projects-Made/" ></a></li>
+        <li><a href="/Projects-Made/" ></a></li>
+        <li><a href="/Projects-Made/" ></a></li>
+        <li><a href="/Projects-Made/" ></a></li>
+        <li><a href="/Projects-Made/" ></a></li>
+        <li><a href="/Projects-Made/" ></a></li>
         <li><a href="/Projects-Made/" ></a></li>
       </ul>
     <footer>
