--- a/projects-made.html
+++ b/projects-made.html
@@ -10,13 +10,13 @@
       <ul>
         <li><a href="/Projects-Made/recipe-book.html" >Recipe Book</a></li>
         <li><a href="/Projects-Made/contact-form.html" >Simulation of a contact form</a></li>
-        <li><a href="/Projects-Made/loading.html" >Loading screen</a></li>
+        <li><a href="/Projects-Made/loading.html" >Loading Screen</a></li>
         <li><a href="/Projects-Made/toggle-switch.html" >Toggle Button</a></li>
         <li><a href="/Projects-Made/tooltip.html" >Tooltip</a></li>
         <li><a href="/Projects-Made/to-do.html" >ToDo</a></li>
         <li><a href="/Projects-Made/card-flip.html" >Card Flip</a></li>
         <li><a href="/Projects-Made/parallax.html" >Parallax Scroll</a></li>
-        <li><a href="/Projects-Made/" ></a></li>
+        <li><a href="/Projects-Made/animated-text.html" >Animated Text</a></li>
         <li><a href="/Projects-Made/" ></a></li>
         <li><a href="/Projects-Made/" ></a></li>
         <li><a href="/Projects-Made/" ></a></li>
