--- a/projects-made.html
+++ b/projects-made.html
@@ -17,7 +17,7 @@
         <li><a href="/Projects-Made/card-flip.html" >Card Flip</a></li>
         <li><a href="/Projects-Made/parallax.html" >Parallax Scroll</a></li>
         <li><a href="/Projects-Made/animated-text.html" >Animated Text</a></li>
-        <li><a href="/Projects-Made/" ></a></li>
+        <li><a href="/Projects-Made/pricing-table.html" >Pricing Table</a></li>
         <li><a href="/Projects-Made/" ></a></li>
         <li><a href="/Projects-Made/" ></a></li>
         <li><a href="/Projects-Made/" ></a></li>
