--- a/projects-made.html
+++ b/projects-made.html
@@ -18,7 +18,7 @@
         <li><a href="/Projects-Made/parallax.html" >Parallax Scroll</a></li>
         <li><a href="/Projects-Made/animated-text.html" >Animated Text</a></li>
         <li><a href="/Projects-Made/pricing-table.html" >Pricing Table</a></li>
-        <li><a href="/Projects-Made/" ></a></li>
+        <li><a href="/Projects-Made/currency-converter.html" >Currency Converter</a></li>
         <li><a href="/Projects-Made/" ></a></li>
         <li><a href="/Projects-Made/" ></a></li>
         <li><a href="/Projects-Made/" ></a></li>
