--- a/Projects-Made/loading.html
+++ b/Projects-Made/loading.html
@@ -32,6 +32,8 @@
     </style>
 </head>
 <body>
-    <div class="loader"></div>
+    <div class="loader-container">
+    <    div class="loader"></div>
+    </div>
 </body>
 </html>
