--- a/index.html
+++ b/index.html
@@ -150,6 +150,56 @@
         </div>
     </section>
 
+    <!--PRICING-->
+    <section class="section pricing-section">
+            <div class="pricing-table">
+                <p>Section not working yet.</p>
+                <div class="plan">
+                    <h2>Basic Package</h2>
+                    <p class="price">$300</p>
+                    <p>Total of 4 pages.</p>
+                    <ul>
+                        <li>Home Page</li>
+                        <li>About Us Page</li>
+                        <li>Services/Products Page</li>
+                        <li>Contact Us Page</li>
+                        <li>Simple Navigation Menu</li>
+                    </ul>
+                    <a href="#" class="btn">Order</a>
+                </div>
+                <div class="plan featured">
+                    <h2>Standard Package</h2>
+                    <p class="price">$500</p>
+                    <p>Total of 4 pages.</p>
+                    <ul>
+                        <li>Home Page with customization</li>
+                        <li>About Us Page with additional sections</li>
+                        <li>Services/Products Page with images and descriptions</li>
+                        <li>Contact Us Page with advanced features (e.g., validation)</li>
+                        <li>Responsive Design for mobile devices</li>
+                        <li>Basic SEO Optimization</li>
+                    </ul>
+                    <a href="#" class="btn">Order</a>
+                </div>
+                <div class="plan">
+                    <h2>Premium Package</h2>
+                    <p class="price">$800</p>
+                    <p>Total of 4 pages.</p>
+                    <ul>
+                        <li>Home Page with high customization</li>
+                        <li>Advanced design elements (e.g., animations, image gallery)</li>
+                        <li>Comprehensive About Us with multimedia content</li>
+                        <li>Services/Products with detailed information and additional features</li>
+                        <li>Contact Form with advanced functionalities (e.g., file upload)</li>
+                        <li>Responsive Design for various devices</li>
+                        <li>Full SEO Optimization</li>
+                        <li>1-month post-launch support for bug fixes and adjustments</li>
+                    </ul>
+                    <a href="#" class="btn">Order</a>
+                </div>
+        </div>
+    </section>
+    
     <!-- FOOTER -->
     <footer class="footer section-pink">
         <div class="container">
