--- a/Projects-Made/tooltip.html
+++ b/Projects-Made/tooltip.html
@@ -49,7 +49,7 @@
 <body>
     <div class="tooltip-container">
         Hover over me
-        <div class="tooltip">This is a CSS-only Tooltip</div>
+        <div class="tooltip">This is a Tooltip</div>
     </div>
 </body>
 </html>
