--- a/Projects-Made/card-flip.html
+++ b/Projects-Made/card-flip.html
@@ -59,16 +59,20 @@
         transform: rotateY(180deg);
         background-color: #2ecc71;
     }
+
+    p {
+        font-size: 100px;
+    }
     </style>
 </head>
 <body>
     <div class="card">
         <div class="card-inner">
             <div class="card-front">
-                Front Content
+                <p>&#10032;</p>
             </div>
             <div class="card-back">
-                Back Content
+                <p>&#9733;</p>
             </div>
         </div>
     </div>
