--- a/Projects-Made/currency-converter.html
+++ b/Projects-Made/currency-converter.html
@@ -10,15 +10,59 @@
   <h1>Currency Converter</h1>
   <label for="fromCurrency">From Currency:</label>
   <select id="fromCurrency">
-    <option value="USD">USD</option>
     <option value="EUR">EUR</option>
+    <option value="USD">USD</option>
+    <option value="GBP">GBP</option>
+    <option value="JPY">JPY</option>
+    <option value="AUD">AUD</option>
+    <option value="CAD">CAD</option>
+    <option value="CHF">CHF</option>
+    <option value="CNY">CNY</option>
+    <option value="SEK">SEK</option>
+    <option value="NZD">NZD</option>
+    <option value="KRW">KRW</option>
+    <option value="SGD">SGD</option>
+    <option value="NOK">NOK</option>
+    <option value="MXN">MXN</option>
+    <option value="INR">INR</option>
+    <option value="BRL">BRL</option>
+    <option value="ZAR">ZAR</option>
+    <option value="RUB">RUB</option>
+    <option value="TRY">TRY</option>
+    <option value="AED">AED</option>
+    <option value="HKD">HKD</option>
+    <option value="THB">THB</option>
+    <option value="IDR">IDR</option>
+    <option value="MYR">MYR</option>
   </select>
   <label for="amount">Amount:</label>
   <input type="number" id="amount" placeholder="Enter amount">
   <label for="toCurrency">To Currency:</label>
   <select id="toCurrency">
-    <option value="USD">USD</option>
     <option value="EUR">EUR</option>
+    <option value="USD">USD</option>
+    <option value="GBP">GBP</option>
+    <option value="JPY">JPY</option>
+    <option value="AUD">AUD</option>
+    <option value="CAD">CAD</option>
+    <option value="CHF">CHF</option>
+    <option value="CNY">CNY</option>
+    <option value="SEK">SEK</option>
+    <option value="NZD">NZD</option>
+    <option value="KRW">KRW</option>
+    <option value="SGD">SGD</option>
+    <option value="NOK">NOK</option>
+    <option value="MXN">MXN</option>
+    <option value="INR">INR</option>
+    <option value="BRL">BRL</option>
+    <option value="ZAR">ZAR</option>
+    <option value="RUB">RUB</option>
+    <option value="TRY">TRY</option>
+    <option value="AED">AED</option>
+    <option value="HKD">HKD</option>
+    <option value="THB">THB</option>
+    <option value="IDR">IDR</option>
+    <option value="MYR">MYR</option>
   </select>
   <button onclick="convertCurrency()">Convert</button>
   <h2>Result:</h2>
