--- a/Projects-Made/currency-converter.html
+++ b/Projects-Made/currency-converter.html
@@ -5,64 +5,104 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <title>Currency Converter</title>
+
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      text-align: center;
+    }
+
+    h1, h2 {
+      margin-bottom: 10px;
+    }
+
+    label {
+      display: block;
+      margin: 10px 0;
+    }
+
+    select, input, button {
+      width: 100%;
+      padding: 8px;
+      margin: 5px 0;
+      box-sizing: border-box;
+    }
+
+    button {
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #45a049;
+    }
+
+    #result {
+      margin-top: 20px;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
   <h1>Currency Converter</h1>
   <label for="fromCurrency">From Currency:</label>
-  <select id="fromCurrency">
-    <option value="EUR">EUR</option>
+  <select id="fromCurrency"> 
     <option value="USD">USD</option>
-    <option value="GBP">GBP</option>
-    <option value="JPY">JPY</option>
+    
+    <option value="AED">AED</option>
     <option value="AUD">AUD</option>
+    <option value="BRL">BRL</option>
     <option value="CAD">CAD</option>
     <option value="CHF">CHF</option>
     <option value="CNY">CNY</option>
-    <option value="SEK">SEK</option>
-    <option value="NZD">NZD</option>
-    <option value="KRW">KRW</option>
-    <option value="SGD">SGD</option>
-    <option value="NOK">NOK</option>
-    <option value="MXN">MXN</option>
-    <option value="INR">INR</option>
-    <option value="BRL">BRL</option>
-    <option value="ZAR">ZAR</option>
-    <option value="RUB">RUB</option>
-    <option value="TRY">TRY</option>
-    <option value="AED">AED</option>
+    <option value="EUR">EUR</option>
+    <option value="GBP">GBP</option>
     <option value="HKD">HKD</option>
-    <option value="THB">THB</option>
     <option value="IDR">IDR</option>
+    <option value="INR">INR</option>
+    <option value="JPY">JPY</option>
+    <option value="KRW">KRW</option>
     <option value="MYR">MYR</option>
+    <option value="MXN">MXN</option>
+    <option value="NOK">NOK</option>
+    <option value="NZD">NZD</option>
+    <option value="RUB">RUB</option>
+    <option value="SEK">SEK</option>
+    <option value="SGD">SGD</option>
+    <option value="THB">THB</option>
+    <option value="ZAR">ZAR</option>
   </select>
   <label for="amount">Amount:</label>
   <input type="number" id="amount" placeholder="Enter amount">
   <label for="toCurrency">To Currency:</label>
   <select id="toCurrency">
     <option value="EUR">EUR</option>
-    <option value="USD">USD</option>
-    <option value="GBP">GBP</option>
-    <option value="JPY">JPY</option>
+    
+    <option value="AED">AED</option>
     <option value="AUD">AUD</option>
+    <option value="BRL">BRL</option>
     <option value="CAD">CAD</option>
     <option value="CHF">CHF</option>
     <option value="CNY">CNY</option>
-    <option value="SEK">SEK</option>
-    <option value="NZD">NZD</option>
-    <option value="KRW">KRW</option>
-    <option value="SGD">SGD</option>
-    <option value="NOK">NOK</option>
-    <option value="MXN">MXN</option>
-    <option value="INR">INR</option>
-    <option value="BRL">BRL</option>
-    <option value="ZAR">ZAR</option>
-    <option value="RUB">RUB</option>
-    <option value="TRY">TRY</option>
-    <option value="AED">AED</option>
+    <option value="GBP">GBP</option>
     <option value="HKD">HKD</option>
-    <option value="THB">THB</option>
     <option value="IDR">IDR</option>
+    <option value="INR">INR</option>
+    <option value="JPY">JPY</option>
+    <option value="KRW">KRW</option>
     <option value="MYR">MYR</option>
+    <option value="MXN">MXN</option>
+    <option value="NOK">NOK</option>
+    <option value="NZD">NZD</option>
+    <option value="RUB">RUB</option>
+    <option value="SEK">SEK</option>
+    <option value="SGD">SGD</option>
+    <option value="THB">THB</option>
+    <option value="USD">USD</option>
+    <option value="ZAR">ZAR</option>
   </select>
   <button onclick="convertCurrency()">Convert</button>
   <h2>Result:</h2>
