--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="column">
                     <img src="/images/cube-hole.svg" alt="cube icon">
                     <h3 class="interest-name">Mechatronics</h3>
-                    <p class="interest-text">I began my journey into robotics during the 5th grade of primary school, and I've been actively interested in it for two years. Currently, I am in the second grade of high school, where I have been studying mechatronics as a subject for the last two years. <a href="https://www.tinkercad.com/users/lpgJmxk0qV6" alt="Link to the profile on my Tinkercad account." target="_blank">Here are a few of the projects I've worked on</a></p>
+                    <p class="interest-text">I began my journey into robotics during the 5th grade of primary school, and I've been actively interested in it for two years. Currently, I am in the second grade of high school, where I have been studying mechatronics as a subject for the last two years.</p>
                 </div>
                 <div class="column">
                     <img src="/images/code.svg" alt="code tags icon">
@@ -82,7 +82,7 @@
                 <div class="column">
                     <img src="/images/code-brackets.svg" alt="code brackets icon">
                     <h3 class="interest-name">C++</h3>
-                    <p class="interest-text">My venture into the realm of C++ programming started in the 1st grade of high school, and I've dedicated the 2 years to honing my skills in this language and similar ones like: python, java. Over the past two years, I've delved into various aspects of C++ development, and <a href="https://replit.com/@thinker-bu" alt="Link to my replit profile." target="_blank">here are a few highlights from my projects.</a></p>
+                    <p class="interest-text">My venture into the realm of C++ programming started in the 1st grade of high school, and I've dedicated the 2 years to honing my skills in this language and similar ones like: python, java. Over the past two years, I've delved into various aspects of C++ development and made almost <strong>500</strong> programs in that language.</p>
                 </div>
                 <div class="column">
                     <img src="/images/dna.svg" alt="dna icon">
