--- a/projects-made.html
+++ b/projects-made.html
@@ -2,11 +2,54 @@
 <html lang="en">
   <head>
     <title>Website projects made</title>
-    <link rel="stylesheet" href="/Projects-Made/projects-made.css">
+    
+    <style>
+      body {
+        font-family: 'Arial', sans-serif;
+        background-color: #f5f5f5;
+        margin: 0;
+        padding: 0;
+      }
+
+      h1 {
+        color: #333;
+        text-align: center;
+      }
+
+      ul {
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+        text-align: center;
+      }
+
+      li {
+        margin: 10px;
+      }
+
+      a {
+        text-decoration: none;
+        color: #0066cc;
+        font-weight: bold;
+      }
+
+      a:hover {
+        color: #004080;
+      }
+
+      footer {
+        background-color: #333;
+        color: #fff;
+        text-align: center;
+        padding: 10px;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+      }
+    </style>
   </head>
   <body>
     <h1>Website projects made:</h1>
-    <p>4/205-68-51</p>
       <ul>
         <li><a href="/Projects-Made/recipe-book.html" >Recipe Book</a></li>
         <li><a href="/Projects-Made/contact-form.html" >Simulation of a contact form</a></li>
