--- a/projects-made.html
+++ b/projects-made.html
@@ -7,20 +7,20 @@
       body {
         font-family: 'Arial', sans-serif;
         background-color: #f5f5f5;
-        margin: 0;
+        margin: 5px;
         padding: 0;
       }
 
       h1 {
-        color: #333;
-        text-align: center;
+        color: #5A000B;
+        text-align: left;
       }
 
       ul {
-        list-style-type: none;
+        list-style-type: circle;
         padding: 0;
         margin: 0;
-        text-align: center;
+        text-align: left;
       }
 
       li {
@@ -29,16 +29,16 @@
 
       a {
         text-decoration: none;
-        color: #0066cc;
+        color: #A12533;
         font-weight: bold;
       }
 
       a:hover {
-        color: #004080;
+        color: #1E0003;
       }
 
       footer {
-        background-color: #333;
+        background-color: #3C0007;
         color: #fff;
         text-align: center;
         padding: 10px;
