--- a/projects-made.html
+++ b/projects-made.html
@@ -18,8 +18,6 @@
 
       ul {
         list-style-type: circle;
-        padding: 0;
-        margin: 0;
         text-align: left;
       }
 
@@ -44,7 +42,7 @@
         padding: 10px;
         position: fixed;
         bottom: 0;
-        width: 100%;
+        width: 100vw;
       }
     </style>
   </head>
