--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="column about-text">
                     <h2 class="section-title">About Me</h2>
                     <p class="first-letter"><strong>I'm Hanna.</strong></p>
-                    <p>I have a deep passion for both drawing and programming. Beyond my technical pursuits, I also have a keen interest in genetic manipulation. I find joy in learning new things. <strong>My art gallery will show up once clicked on img &#8594;.</strong></p>
+                    <p>I have a deep passion for both drawing and programming. Beyond my technical pursuits, I also have a keen interest in biology. I find joy in learning new things and drinking coffee. &#9749; <strong>My art gallery will show up once clicked on img &#8594;.</strong></p>
                 </div>
                 <a href="/gallery.html"><div class="column" id="slideshow" title="Click to see my art gallery."></div></a>
             </div>
@@ -87,7 +87,7 @@
                 <div class="column">
                     <img src="/images/dna.svg" alt="dna icon">
                     <h3 class="interest-name">Genes</h3>
-                    <p class="interest-text">Currently studing...<a href="#" alt="" target="_blank"></a></p>
+                    <p class="interest-text">Looking into information...<a href="#" alt="" target="_blank"></a></p>
                 </div>
             </div>
         </div>
