--- a/projects-made.html
+++ b/projects-made.html
@@ -35,6 +35,7 @@
         padding: 10px;
         position: relative;
         bottom: 0;
+        margin: none;
         width: 100vw;
       }
     </style>
@@ -54,13 +55,13 @@
         <li><a href="/Projects-Made/pricing-table.html" >Pricing Table</a></li>
         <li><a href="/Projects-Made/currency-converter.html" >Currency Converter</a></li>
         <li><a href="/Projects-Made/rand-quote-gen.html" >Random Quote Generator</a></li>
-        <li><a href="/Projects-Made/" ></a></li>
-        <li><a href="/Projects-Made/" ></a></li>
-        <li><a href="/Projects-Made/" ></a></li>
-        <li><a href="/Projects-Made/" ></a></li>
-        <li><a href="/Projects-Made/" ></a></li>
-        <li><a href="/Projects-Made/" ></a></li>
-        <li><a href="/Projects-Made/" ></a></li>
+        <li><a href="/Projects-Made/calculator.html" >Calculator</a></li>
+        <li><a href="/Projects-Made/ani-prog-bar.html" >Animated Progress Bar</a></li>
+        <li><a href="/Projects-Made/music-player.html" >Music Player</a></li>
+        <li><a href="/Projects-Made/inter-star-rate-comp.html" >Star Rating</a></li>
+        <li><a href="/Projects-Made/word-cloud-gen.html" >Word Cloud Generator</a></li>
+        <li><a href="/Projects-Made/pomodoro-timer.html" >Pomodoro Timer</a></li>
+        <li><a href="/Projects-Made/browser-draw-app.html" >Browser Based Drawing App</a></li>
         <li><a href="/Projects-Made/" ></a></li>
         <li><a href="/Projects-Made/" ></a></li>
         <li><a href="/Projects-Made/" ></a></li>
