--- a/Projects-Made/ani-prog-bar.html
+++ b/Projects-Made/ani-prog-bar.html
@@ -12,6 +12,7 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
+      background-color: #fdf6e3;
     }
 
     #progress-container {
@@ -25,7 +26,7 @@
     #progress-bar {
       width: 0;
       height: 30px;
-      background-color: #4CAF50;
+      background-color: #ffd700;
       transition: width 0.3s ease;
     }
 
@@ -34,6 +35,10 @@
       font-size: 16px;
       cursor: pointer;
       margin-right: 10px;
+      background-color: #3498db;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
     }
   </style>
 </head>
