--- a/projects-made.html
+++ b/projects-made.html
@@ -3,15 +3,25 @@
   <head>
     <title>Website projects made</title>
     
-    <style>
+     <style>
       h1 {
         color: #5A000B;
         text-align: left;
       }
 
+      body {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
       ul {
         list-style-type: circle;
         text-align: left;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-wrap: wrap;
       }
 
       li {
@@ -42,6 +52,10 @@
   </head>
   <body>
     <h1>Website projects made:</h1>
+      <h2>Perfect:</h2>
+      <ul>
+        
+      </ul>
       <h2>Ready:</h2>
       <ul>
         <li><a href="/Projects-Made/recipe-book.html" >Recipe Book</a></li>
