--- a/Projects-Made/animated-text.html
+++ b/Projects-Made/animated-text.html
@@ -13,7 +13,7 @@
         align-items: center;
         height: 100vh;
         margin: 0;
-        background-color: #f0f0f0;
+        background-color: #fff;
     }
     
     .animated-text {
@@ -77,30 +77,10 @@
 </head>
 <body>
     <div class="animated-text">
-        <span>S</span>
-        <span>U</span>
-        <span>P</span>
-        <span>E</span>
-        <span>R</span>
-        <span> </span>
         <span>C</span>
         <span>O</span>
         <span>O</span>
         <span>L</span>
-        <span> </span>
-        <span>A</span>
-        <span>n</span>
-        <span>i</span>
-        <span>m</span>
-        <span>a</span>
-        <span>t</span>
-        <span>e</span>
-        <span>d</span>
-        <span> </span>
-        <span>T</span>
-        <span>e</span>
-        <span>x</span>
-        <span>t</span>
     </div>
 </body>
 </html>
