--- a/projects-made.html
+++ b/projects-made.html
@@ -32,6 +32,7 @@
         text-decoration: none;
         color: #A12533;
         font-weight: bold;
+        margin-right: 10px;
       }
 
       a:hover {
@@ -54,28 +55,28 @@
       </ul>
       <h2>Ready:</h2>
       <ul>
-        <li><a href="/Projects-Made/recipe-book.html" >Recipe Book </a></li>
-        <li><a href="/Projects-Made/contact-form.html" >Simulation of a contact form </a></li>
-        <li><a href="/Projects-Made/loading.html" >Loading Screen </a></li>
-        <li><a href="/Projects-Made/toggle-switch.html" >Toggle Button </a></li>
-        <li><a href="/Projects-Made/tooltip.html" >Tooltip </a></li>
-        <li><a href="/Projects-Made/to-do.html" >ToDo </a></li>
-        <li><a href="/Projects-Made/card-flip.html" >Card Flip </a></li>
-        <li><a href="/Projects-Made/animated-text.html" >Animated Text </a></li>
-        <li><a href="/Projects-Made/pricing-table.html" >Pricing Table </a></li>
-        <li><a href="/Projects-Made/currency-converter.html" >Currency Converter </a></li>
-        <li><a href="/Projects-Made/rand-quote-gen.html" >Random Quote Generator </a></li>
-        <li><a href="/Projects-Made/calculator.html" >Calculator </a></li>
-        <li><a href="/Projects-Made/ani-prog-bar.html" >Animated Progress Bar </a></li>
-        <li><a href="/Projects-Made/inter-star-rate-comp.html" >Star Rating </a></li>
-        <li><a href="/Projects-Made/word-cloud-gen.html" >Word Cloud Generator </a></li>
-        <li><a href="/Projects-Made/pomodoro-timer.html" >Pomodoro Timer </a></li>
-        <li><a href="/Projects-Made/browser-draw-app.html" >Browser Based Drawing App </a></li>
+        <li><a href="/Projects-Made/recipe-book.html" >Recipe Book</a></li>
+        <li><a href="/Projects-Made/contact-form.html" >Simulation of a contact form</a></li>
+        <li><a href="/Projects-Made/loading.html" >Loading Screen</a></li>
+        <li><a href="/Projects-Made/toggle-switch.html" >Toggle Button</a></li>
+        <li><a href="/Projects-Made/tooltip.html" >Tooltip</a></li>
+        <li><a href="/Projects-Made/to-do.html" >ToDo</a></li>
+        <li><a href="/Projects-Made/card-flip.html" >Card Flip</a></li>
+        <li><a href="/Projects-Made/animated-text.html" >Animated Text</a></li>
+        <li><a href="/Projects-Made/pricing-table.html" >Pricing Table</a></li>
+        <li><a href="/Projects-Made/currency-converter.html" >Currency Converter</a></li>
+        <li><a href="/Projects-Made/rand-quote-gen.html" >Random Quote Generator</a></li>
+        <li><a href="/Projects-Made/calculator.html" >Calculator</a></li>
+        <li><a href="/Projects-Made/ani-prog-bar.html" >Animated Progress Bar</a></li>
+        <li><a href="/Projects-Made/inter-star-rate-comp.html" >Star Rating</a></li>
+        <li><a href="/Projects-Made/word-cloud-gen.html" >Word Cloud Generator</a></li>
+        <li><a href="/Projects-Made/pomodoro-timer.html" >Pomodoro Timer</a></li>
+        <li><a href="/Projects-Made/browser-draw-app.html" >Browser Based Drawing App</a></li>
       </ul>
       <h2>Lack of necessery img/video/audio:</h2>
       <ul>
-        <li><a href="/Projects-Made/parallax.html" >Parallax Scroll </a></li>
-        <li><a href="/Projects-Made/music-player.html" >Music Player </a></li>
+        <li><a href="/Projects-Made/parallax.html" >Parallax Scroll</a></li>
+        <li><a href="/Projects-Made/music-player.html" >Music Player</a></li>
       </ul>
     <footer>
         <p>&copy; H.G.</p>
