--- a/Projects-Made/browser-draw-app.html
+++ b/Projects-Made/browser-draw-app.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,12 +32,13 @@
 </head>
 <body>
   <canvas id="drawingCanvas" width="500" height="300"></canvas>
-  
+
   <div id="tools">
     <button onclick="setTool('pen')">Pen</button>
     <button onclick="setTool('eraser')">Eraser</button>
     <input type="color" id="colorPicker" value="#000000" onchange="setColor()">
     <button onclick="clearCanvas()">Clear Canvas</button>
+    <button onclick="downloadImage()">Download Image</button>
   </div>
 
   <script>
@@ -92,6 +94,16 @@
 
     function clearCanvas() {
       context.clearRect(0, 0, canvas.width, canvas.height);
+    }
+
+    function downloadImage() {
+      const dataUrl = canvas.toDataURL();
+      const a = document.createElement('a');
+      a.href = dataUrl;
+      a.download = 'drawing.png';
+      document.body.appendChild(a);
+      a.click();
+      document.body.removeChild(a);
     }
   </script>
 </body>
