--- a/Projects-Made/recipe-book.html
+++ b/Projects-Made/recipe-book.html
@@ -11,10 +11,11 @@
             font-family: 'Arial', sans-serif;
             background-color: #E6F7FF;
             color: #333;
+            margin: 0;
         }
 
         header {
-            background-color: #66B2FF;
+            background-color: #87CEEB;
             padding: 16px;
             text-align: center;
         }
@@ -46,12 +47,12 @@
 
         h2 {
             font-size: 1.1em;
-            color: #3366CC;
+            color: #87CEEB;
             cursor: pointer;
         }
 
         footer {
-            background-color: #66B2FF;
+            background-color: #87CEEB;
             padding: 6px;
             text-align: center;
             position: fixed;
