--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </header>
             <div>
                 <h1 class="hero-title">Hello!</h1>
-                <p class="hero-lead">Welcome to my site. Get to know about me &#9728;.</p>
+                <p class="hero-lead">Welcome to my site. Get to know about me &#9728;. My coding projects in the "My Interest" section, please click the link avaible there in bold.</p>
                 <a href="#about" class="hero-button">Further</a>
             </div>
         </div>
