--- a/projects-made.html
+++ b/projects-made.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Website projects made</title>
+    <title>Website projects made 37</title>
     
      <style>
       h1 {
@@ -64,6 +64,14 @@
       <h2>Medium:</h2>
         <ul>
           <li><a href="/Projects-Made/recipe-book.html" >Recipe Book</a></li>
+          <li><a href="/Projects-Made/rand-pass-gen.html" >Random Password Generator</a></li>
+          <li><a href="/Projects-Made/virtual-key-board.html" >Virtual Key Board</a></li>
+          <li><a href="/Projects-Made/tic-tac-toe.html" >Tic-Tac-Toe Game</a></li>
+          <li><a href="/Projects-Made/expense-track.html" >Expense Tracker</a></li>
+          <li><a href="/Projects-Made/timeline-comp.html" >Timeline</a></li>
+          <li><a href="/Projects-Made/drag-drop-puzzle.html" >Drag and Drop Puzzle Game</a></li>
+          <li><a href="/Projects-Made/virtual-dice.html" >Virtual Dice</a></li>
+          <li><a href="/Projects-Made/3d-cube.html" >3D Cube</a></li>
           <li><a href="/Projects-Made/contact-form.html" >Simulation of a contact form</a></li>
           <li><a href="/Projects-Made/to-do.html" >ToDo</a></li>
           <li><a href="/Projects-Made/currency-converter.html" >Currency Converter</a></li>
