--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </header>
             <div>
                 <h1 class="hero-title">Hello!</h1>
-                <p class="hero-lead">Welcome to my site. Get to know about me &#9728;. My coding projects in the <a href="#my_interests">"My Interests"</a> section, please click the link available there in bold.</p>
+                <p class="hero-lead">Welcome to my site. Get to know about me &#9728;. My coding projects in the <a href="#my_interests" style="text-decoration: none; font-weight: bold; color: var(--pink);" >"My Interests"</a> section, please click the link available there in bold.</p>
                 <a href="#about" class="hero-button">Further</a>
             </div>
         </div>
@@ -58,7 +58,7 @@
                 <div class="column about-text">
                     <h2 class="section-title">About Me</h2>
                     <p class="first-letter"><strong>I'm H[DjW7]</strong></p>
-                    <p>I have a deep passion for both drawing and programming. Beyond my technical pursuits, I also have a keen interest in biology. I find joy in learning new things and drinking coffee. &#9749; <strong>My art gallery will show up once clicked on img &#8594;</strong> or you can just see it on <a href="https://shorturl.at/derEQ" target="_blank"><strong>canva</strong></a>.</p>
+                    <p>I have a deep passion for both drawing and programming. Beyond my technical pursuits, I also have a keen interest in biology. I find joy in learning new things and drinking coffee. &#9749; <strong>My art gallery will show up once clicked on img &#8594;</strong> or you can just see it on <a href="https://shorturl.at/derEQ" target="_blank" style="text-decoration: none; font-weight: bold; color: var(--pink);"><strong>canva</strong></a>.</p>
                 </div>
                 <a href="/gallery.html"><div class="column" id="slideshow" title="Click to see my art gallery."></div></a>
             </div>
