--- a/projects-made.html
+++ b/projects-made.html
@@ -51,36 +51,36 @@
     <h1>Website projects made:</h1>
       <h2>Simple:</h2>
       <ul>
-        <li><a href="/Projects-Made/loading.html" >Loading Screen</a></li>
         <li><a href="/Projects-Made/toggle-switch.html" >Toggle Button</a></li>
         <li><a href="/Projects-Made/tooltip.html" >Tooltip</a></li>
-        <li><a href="/Projects-Made/card-flip.html" >Card Flip</a></li>
         <li><a href="/Projects-Made/animated-text.html" >Animated Text</a></li>
-        <li><a href="/Projects-Made/pricing-table.html" >Pricing Table</a></li>
-        <li><a href="/Projects-Made/ani-prog-bar.html" >Animated Progress Bar</a></li>
         <li><a href="/Projects-Made/inter-star-rate-comp.html" >Star Rating</a></li>
-        <li><a href="/Projects-Made/word-cloud-gen.html" >Word Cloud Generator</a></li>
+        <li><a href="/Projects-Made/rand-pass-gen.html" >Random Password Generator</a></li>
+        <li><a href="/Projects-Made/virtual-key-board.html" >Virtual Key Board</a></li>
+        <li><a href="/Projects-Made/tic-tac-toe.html" >Tic-Tac-Toe Game</a></li>
+        <li><a href="/Projects-Made/virtual-dice.html" >Virtual Dice</a></li>
+        <li><a href="/Projects-Made/contact-form.html" >Simulation of a contact form</a></li>
+        <li><a href="/Projects-Made/to-do.html" >ToDo</a></li>
+        <li><a href="/Projects-Made/rand-quote-gen.html" >Random Quote Generator</a></li>
+        <li><a href="/Projects-Made/calculator.html" >Calculator</a></li>
       </ul>
-      <h2>Medium:</h2>
+      <h2>Intermediate:</h2>
         <ul>
-          <li><a href="/Projects-Made/recipe-book.html" >Recipe Book</a></li>
-          <li><a href="/Projects-Made/rand-pass-gen.html" >Random Password Generator</a></li>
-          <li><a href="/Projects-Made/virtual-key-board.html" >Virtual Key Board</a></li>
-          <li><a href="/Projects-Made/tic-tac-toe.html" >Tic-Tac-Toe Game</a></li>
+          <li><a href="/Projects-Made/loading.html" >Loading Screen</a></li>
+          <li><a href="/Projects-Made/card-flip.html" >Card Flip</a></li>    
+          <li><a href="/Projects-Made/ani-prog-bar.html" >Animated Progress Bar</a></li>
+          <li><a href="/Projects-Made/word-cloud-gen.html" >Word Cloud Generator</a></li>
+          <li><a href="/Projects-Made/pricing-table.html" >Pricing Table</a></li>
           <li><a href="/Projects-Made/expense-track.html" >Expense Tracker</a></li>
           <li><a href="/Projects-Made/timeline-comp.html" >Timeline</a></li>
-          <li><a href="/Projects-Made/drag-drop-puzzle.html" >Drag and Drop Puzzle Game</a></li>
-          <li><a href="/Projects-Made/virtual-dice.html" >Virtual Dice</a></li>
-          <li><a href="/Projects-Made/3d-cube.html" >3D Cube</a></li>
-          <li><a href="/Projects-Made/contact-form.html" >Simulation of a contact form</a></li>
-          <li><a href="/Projects-Made/to-do.html" >ToDo</a></li>
-          <li><a href="/Projects-Made/currency-converter.html" >Currency Converter</a></li>
-          <li><a href="/Projects-Made/rand-quote-gen.html" >Random Quote Generator</a></li>
-          <li><a href="/Projects-Made/calculator.html" >Calculator</a></li>
-          <li><a href="/Projects-Made/pomodoro-timer.html" >Pomodoro Timer</a></li>
         </ul>
-      <h2>Advanced:</h2>
+      <h2>Complex:</h2>
         <ul>
+          <li><a href="/Projects-Made/recipe-book.html" >Recipe Book</a></li>
+          <li><a href="/Projects-Made/drag-drop-puzzle.html" >Drag and Drop Puzzle Game</a></li>
+          <li><a href="/Projects-Made/3d-cube.html" >3D Cube</a></li>
+          <li><a href="/Projects-Made/currency-converter.html" >Currency Converter</a></li>
+          <li><a href="/Projects-Made/pomodoro-timer.html" >Pomodoro Timer</a></li>
           <li><a href="/Projects-Made/browser-draw-app.html" >Browser Based Drawing App</a></li>
         </ul>
       <h2>Lack of necessery img/video/audio:</h2>
