--- a/Projects-Made/recipe-book.html
+++ b/Projects-Made/recipe-book.html
@@ -187,7 +187,7 @@
         </article>
     </section>
     <footer>
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
+        <p>&copy; H.G.</p>
     </footer>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
