--- a/Projects-Made/recipe-book.html
+++ b/Projects-Made/recipe-book.html
@@ -36,8 +36,12 @@
             margin-bottom: 6px;
             color: var(--accent-color);
         }
+         ul {
+            display: none;
+        }
 
         p {
+            display: none;
             color: var(--secondary-text-color);
         }
 
