--- a/Projects-Made/recipe-book.html
+++ b/Projects-Made/recipe-book.html
@@ -46,6 +46,7 @@
         }
 
         h1 ~ p {
+            display: inline;
             color: var(--accent-color);
         }
 
@@ -82,6 +83,7 @@
         }
 
         footer p {
+            display: inline;
             font-size: 0.8em;
             color: var(--accent-color);
         }
