--- a/projects-made.html
+++ b/projects-made.html
@@ -6,7 +6,7 @@
      <style>
       h1 {
         color: #5A000B;
-        text-align: left;
+        text-align: center;
       }
 
       body {
@@ -22,6 +22,7 @@
         padding: 0;
         display: flex;
         flex-wrap: wrap;
+        float: left;
       }
 
       li {
