--- a/projects-made.html
+++ b/projects-made.html
@@ -1,51 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Website projects made 37</title>
+    <title>Website projects made</title>
     
      <style>
-      h1 {
-        color: #5A000B;
-        text-align: center;
-      }
-
-      body {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      ul {
-        list-style-type: circle;
-        text-align: left;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        flex-wrap: wrap;
-        float: left;
-      }
-
-      li {
-        margin: 10px;
-      }
-
-      a {
-        text-decoration: none;
-        color: #A12533;
-        font-weight: bold;
-        margin-right: 10px;
-      }
-
-      a:hover {
-        color: #1E0003;
-      }
-
-      footer {
-        color: #3C0007;
-        text-align: center;
-        position: fixed;
-        bottom: 0;
-      }
+        body {
+          font-family: 'Arial', sans-serif;
+          margin: 0;
+          padding: 0;
+          background-color: #f4f4f4;
+        }
+        header, footer {
+          background-color: #333;
+          color: #fff;
+          text-align: center;
+          padding: 10px;
+        }
+        h1, h2 {
+          color: #333;
+        }
+        ul {
+          list-style-type: none;
+          padding: 0;
+        }
+        li {
+          margin-bottom: 10px;
+        }
+        a {
+          text-decoration: none;
+          color: #007bff;
+        }
+        a:hover {
+          text-decoration: underline;
+        }
     </style>
   </head>
   <body>
