--- a/projects-made.html
+++ b/projects-made.html
@@ -9,12 +9,16 @@
           margin: 0;
           padding: 0;
           background-color: #f4f4f4;
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: space-around;
         }
         header, footer {
           background-color: #333;
           color: #fff;
           text-align: center;
           padding: 10px;
+          width: 100%;
         }
         h1, h2 {
           color: #333;
@@ -22,6 +26,7 @@
         ul {
           list-style-type: none;
           padding: 0;
+          width: 30%;
         }
         li {
           margin-bottom: 10px;
