--- a/projects-made.html
+++ b/projects-made.html
@@ -21,6 +21,16 @@
           padding: 10px;
           width: 100%;
         }
+       
+       header {
+         margin-top: auto;
+         display: block;
+       }
+
+       footer {
+         margin-bottom: auto;
+         display: block;
+       }
         
         h1, h2 {
           color: #333;
