--- a/Projects-Made/3d-cube.html
+++ b/Projects-Made/3d-cube.html
@@ -14,6 +14,7 @@
   </style>
 </head>
 <body>
+  <h1 style="color: white;" >Not made by me!</h1>
   <script src="https://threejs.org/build/three.js"></script>
 
   <script>
@@ -24,7 +25,7 @@
     document.body.appendChild(renderer.domElement);
 
     const geometry = new THREE.BoxGeometry();
-    const material = new THREE.MeshBasicMaterial({ color: #65000B });
+    const material = new THREE.MeshBasicMaterial({ color: 0x00ff00 });
     const cube = new THREE.Mesh(geometry, material);
     scene.add(cube);
 
