--- a/Projects-Made/3d-cube.html
+++ b/Projects-Made/3d-cube.html
@@ -14,7 +14,7 @@
   </style>
 </head>
 <body>
-  <h1 style="color: white;" >Not made by me!</h1>
+  <h1>Not made by me!</h1>
   <script src="https://threejs.org/build/three.js"></script>
 
   <script>
