--- a/Projects-Made/currency-converter.html
+++ b/Projects-Made/currency-converter.html
@@ -30,14 +30,14 @@
     }
 
     button {
-      background-color: #4CAF50;
+      background-color: #E8A217;
       color: white;
       border: none;
       cursor: pointer;
     }
 
     button:hover {
-      background-color: #45a049;
+      background-color: #E09F1E;
     }
 
     #result {
